[package]
name = "abc168"
version = "0.1.0"
authors = ["HikaruEgashira <shighten@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = "*"
competitive = { git = "https://github.com/tanakh/competitive-rs.git" }

[dev-dependencies]
cli_test_dir = "0.1"

[profile.release]
lto = true
panic = 'abort'
