[package]
name = "abc177"
version = "0.1.0"
authors = ["HikaruEgashira <shighten@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
itertools = "=0.9.0"

[dev-dependencies]
cli_test_dir = "0.1"

[profile.release]
lto = true
panic = 'abort'
