[package]
name = "keyence2021"
version = "0.1.0"
authors = ["HikaruEgashira <shighten@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = "*"
num = "*"
competitive = { git = "https://github.com/tanakh/competitive-rs.git" }

[profile.release]
lto = true
panic = 'abort'
